tests/snapshots/ast__error_fn_missing_arg_types.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(fn:void add (a b) (ret (+ a b)))

--- FAILURE ---
Block([
	Invalid
])
