tests/snapshots/ast__error_if_empty.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(if)

--- FAILURE ---
Block([
	Invalid
])
