tests/snapshots/ast__error_if_missing_branches.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(if cond)

--- FAILURE ---
Block([
	Invalid
])
