tests/snapshots/ast__error_let_empty.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(let)

--- FAILURE ---
Block([
	Invalid
])
