tests/snapshots/ast__error_let_missing_value.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(let x)

--- FAILURE ---
Block([
	Invalid
])
