tests/snapshots/ast__happy_function_no_args.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(fn:i32 compute () (ret 42))

--- SUCCESS ---
Block([
	Fn(compute->i32,
		Params([]),
		Return(Literal(U8(42)))
	)
])
