tests/snapshots/ast__happy_function_with_args.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(fn:void add (a:i32 b:i32) (ret (+ a b)))

--- SUCCESS ---
Block([
	Fn(add->void,
		Params([a i32, b i32]),
		Return(Call(+, [Identifier(a), Identifier(b)]))
	)
])
