tests/snapshots/ast__happy_if_else.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(if (> x 1) (ret true) (ret false))

--- SUCCESS ---
Block([
	If(
		Call(>, [Identifier(x), Literal(U8(1))]),
		Return(Literal(Boolean(true))),
		Some(Return(Literal(Boolean(false))))
	)
])
