tests/snapshots/ast__happy_let_statement.snap
---
source: tests/ast.rs
expression: result
---
--- INPUT ---
(let x 5)

--- SUCCESS ---
Block([
	Let(x, Literal(U8(5)))
])
